New keywords for cleansing feed data, UseSerialGC